# CurriculumVitae

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Readme.md  build_it.sh  check_nocommit.sh  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
MakeResume/: ComposeCV.py  __main__.py
MakeResume/files/: Experience.py  ListEducations.py  ListExperiences.py
MakeResume/latex_generation/: TexSection.py  WriteLaTeX.py  tex_path.py  types.py
MakeResume/position_tailoring/: BaselineTailoring.py  LLM_Tailoring.py
MakeResume/tex/: WriteLaTeX.py
MakeResume/tex/Elements/: TexElement.py  TexExperienceShort.py
config/: settings.toml
resume/jobs/: .gitignore
resume/jobs/Prompts/: 0-list_fit-job_description-experience.txt  1-re_order-grade.txt  2-select-suggest.txt  3-correct-a_propos-synthese.txt  4-Lettre_de_motivation.txt
resume/jobs/todo/: job.txt
resume/latex/: .gitignore  cv_12.tex  deedy-resume.cls  original.tex  resume-structured-blue.cls
resume_latex/: cv_12.tex  deedy-resume.cls  resume-structured-blue.cls
resume_latex/fonts/assistant/: SIL Open Font License.txt
resume_latex/sections/body/: input.tex
resume_latex/sections/margin/: input.tex
resume_parts/: _template.yaml
resume_parts/Education/School/: 42.yaml
scripts/: build_and_push_docker.sh  build_resume.sh
src/: ComposeCV.py  __main__.py
src/latex_generation/: TexElement.py  TexSection.py  WriteLaTeX.py  tex_path.py  types.py
src/position_tailoring/: BaselineTailoring.py  LLM_Tailoring.py
src/resume_sources/: all_experiences.py
(+39 files in other folders)
