[project]
name = "curriculumvitae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "dynaconf==3.1.9",
    "fire==0.4.0",
    "pip==22.2",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyyaml==6.0",
    "setuptools==63.2.0",
    "six==1.16.0",
    "termcolor==1.1.0",
    "typing-extensions==4.12.2",
    "wheel==0.37.1",
    "anthropic>=0.45.1",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "langchain-anthropic>=0.3.4",
]
